--- a/resources/sass/partials/_base.scss
+++ b/resources/sass/partials/_base.scss
@@ -2,16 +2,50 @@ body {
   color: $text-regular;
 }
 
+body * {
+  font-family: $font-family-sans-serif;
+}
+
 a {
   color: $link;
+  text-decoration: none !important;
   &:hover {
     color: $link;
   }
 }
 
+code {
+  padding: 3px;
+  background: #ececec;
+  margin: 0 3px;
+}
+
+:not(pre) > code[class*="language-"], pre[class*="language-"] {
+  border-bottom: 1px solid #eee;
+  border-top: 1px solid #eee;
+}
+
+pre > code {
+  border-left: 0 !important;
+  box-shadow: 0 0 !important;
+  background-image: none !important;
+}
+
+
+
+pre[class*="language-"]:before, pre[class*="language-"]:after {
+  display: none !important;
+}
+
 #app {
-  overflow: hidden;
   position: relative;
+  min-height: fit-content;
+}
+
+footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
 }
 
 .font-header {
@@ -81,32 +115,33 @@ a {
 }
 
 .z-depth-1 {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.z-hover:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
 
 .z-depth-2 {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23) !important;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .z-depth-3 {
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23) !important;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .z-depth-4 {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !important;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .z-depth-5 {
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important;
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.z-hover:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !important;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
