--- a/resources/sass/partials/_forms.scss
+++ b/resources/sass/partials/_forms.scss
@@ -12,13 +12,15 @@
   flex-direction: row;
   align-items: center;
   position: relative;
-  height: 23px;
-  padding-left: 31px;
+  height: 20px;
+  padding-left: 28px;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  font-size: 15px;
+  font-weight: 300;
 }
 
 /* Hide the browser's default checkbox */
@@ -33,8 +35,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 23px;
-  width: 23px;
+  height: 20px;
+  width: 20px;
   background-color: #eee;
 }
 
@@ -62,10 +64,10 @@
 
 /* Style the checkmark/indicator */
 .checkbox .checkmark:after {
-  left: 9px;
-  top: 5px;
+  left: 8px;
+  top: 4px;
   width: 5px;
-  height: 10px;
+  height: 9px;
   border: solid white;
   border-width: 0 2px 2px 0;
   -webkit-transform: rotate(45deg) scale(1.2);
@@ -86,6 +88,8 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  font-size: 15px;
+  font-weight: 300;
 }
 
 /* Hide the browser's default radio button */
