--- a/resources/sass/partials/_reset.scss
+++ b/resources/sass/partials/_reset.scss
@@ -1,25 +1,16 @@
-body * {
-  font-family: $font-family-sans-serif !important;
+.mdl-textfield {
+  width: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $font-family-sans-serif !important;
+.mdl-textfield.has-error .mdl-textfield__error {
+  visibility: visible;
 }
 
-input:focus, button:focus {
-  box-shadow: 0 0 !important;
-  outline: none !important;
+.mdl-textfield.has-error .mdl-textfield__input {
+  border-color: #d50000;
+  box-shadow: none;
 }
 
-a {
-  text-decoration: none !important;
-}
-
-ul {
-  list-style: none !important;
-}
-
-.btn {
-  max-width: fit-content;
-  width: fit-content;
+.mdl-textfield.has-error .mdl-textfield__label:after {
+    background-color: #d50000;
 }
