--- a/resources/sass/partials/_typography.scss
+++ b/resources/sass/partials/_typography.scss
@@ -1,3 +1,9 @@
+.display-5 {
+    font-size: 2rem;
+    font-weight: 300;
+    line-height: 1.2;
+}
+
 .light-weight {
   font-weight: 300 !important;
 }
